# docs/DocumentToMarkdown_v1.1_openapi.json
@@ -248,9 +248,9 @@
             "required": false,
             "schema": {
               "type": "integer",
-              "maximum": 200,
+              "maximum": 100,
               "minimum": 1,
-              "default": 50,
+              "default": 10,
               "title": "Limit"
             }
           },
@@ -811,9 +811,9 @@
             "required": false,
             "schema": {
               "type": "integer",
-              "maximum": 200,
+              "maximum": 100,
               "minimum": 1,
-              "default": 50,
+              "default": 10,
               "title": "Limit"
             }
           },
